docs: proba terminado

--- a/docs/Matemáticas/Probabilidades y Estadística/02-modelos_analiticos.mdx
+++ b/docs/Matemáticas/Probabilidades y Estadística/02-modelos_analiticos.mdx
@@ -882,6 +882,16 @@ El valor esperado y varianza están dados por:
 - $\mu_T=\dfrac{\nu}{\nu-2}$, para $\nu>2$.
 - $\sigma_T^2=\dfrac{2 \nu^2(\eta+\nu-2)}{\eta(\nu-2)^2(\nu-4)}$, para $\nu>4$.
 
+### Identificar distribuciones
+
+En general, se pueden seguir los siguientes pasos para identificar la distribución de una variable aleatoria:
+
+- Cumple vs. No cumple $\rightarrow$ Bernoulli.
+- Número de "eventos" en periodos $\rightarrow$ Poisson.
+- Tiempos de duración o espera $\rightarrow$ Exponencial.
+- Suma de eventos individuales $\rightarrow$ Normal.
+- Condiciones extremas de un proceso $\rightarrow$ Valor Extremo.
+
 ## Múltiples variables aleatorias
 
 Para el par de variables aleatorias $X$ e $Y$ se define la función de distribución de probabilidad acumulada como
