docs: fix disqus attributes

--- a/docs/mathematics/probability-and-statistics/exercises/2016-2/p23.mdx
+++ b/docs/mathematics/probability-and-statistics/exercises/2016-2/p23.mdx
@@ -36,7 +36,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/Probabilidades y Estadística/exercises/2016-2/p23"
-  identifier="Probabilidades y Estadística/exercises/2016-2/p23"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/mathematics/probability-and-statistics/exercises/2016-2/p23"
+  identifier="docs/mathematics/probability-and-statistics/exercises/2016-2/p23"
   title="2016-2 Probabilidades y Estadística - Pregunta 23"
 />
