--- a/docs/mathematics/probability-and-statistics/exercises/2017-2/p22.mdx
+++ b/docs/mathematics/probability-and-statistics/exercises/2017-2/p22.mdx
@@ -35,7 +35,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/Probabilidades y Estadística/exercises/2017-2/p22"
-  identifier="Probabilidades y Estadística/exercises/2017-2/p22"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/mathematics/probability-and-statistics/exercises/2017-2/p22"
+  identifier="docs/mathematics/probability-and-statistics/exercises/2017-2/p22"
   title="2017-2 Probabilidades y Estadística - Pregunta 22"
 />
