--- a/docs/mathematics/probability-and-statistics/exercises/2019-1/p07.mdx
+++ b/docs/mathematics/probability-and-statistics/exercises/2019-1/p07.mdx
@@ -41,7 +41,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/Probabilidades y Estadística/exercises/2019-1/p07"
-  identifier="Probabilidades y Estadística/exercises/2019-1/p07"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/mathematics/probability-and-statistics/exercises/2019-1/p07"
+  identifier="docs/mathematics/probability-and-statistics/exercises/2019-1/p07"
   title="2019-1 Probabilidades y Estadística - Pregunta 7"
 />
