--- a/docs/mathematics/probability-and-statistics/exercises/2019-2/p09.mdx
+++ b/docs/mathematics/probability-and-statistics/exercises/2019-2/p09.mdx
@@ -42,7 +42,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/Probabilidades y Estadística/exercises/2019-2/p09"
-  identifier="Probabilidades y Estadística/exercises/2019-2/p09"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/mathematics/probability-and-statistics/exercises/2019-2/p09"
+  identifier="docs/mathematics/probability-and-statistics/exercises/2019-2/p09"
   title="2019-2 Probabilidades y Estadística - Pregunta 9"
 />
