--- a/docs/mathematics/probability-and-statistics/exercises/2016-1/p19.mdx
+++ b/docs/mathematics/probability-and-statistics/exercises/2016-1/p19.mdx
@@ -45,7 +45,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/Probabilidades y Estadística/exercises/2016-1/p19"
-  identifier="Probabilidades y Estadística/exercises/2016-1/p19"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/mathematics/probability-and-statistics/exercises/2016-1/p19"
+  identifier="docs/mathematics/probability-and-statistics/exercises/2016-1/p19"
   title="2016-1 Probabilidades y Estadística - Pregunta 19"
 />
