--- a/docs/mathematics/probability-and-statistics/exercises/2016-2/p21.mdx
+++ b/docs/mathematics/probability-and-statistics/exercises/2016-2/p21.mdx
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/Probabilidades y Estadística/exercises/2016-2/p21"
-  identifier="Probabilidades y Estadística/exercises/2016-2/p21"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/mathematics/probability-and-statistics/exercises/2016-2/p21"
+  identifier="docs/mathematics/probability-and-statistics/exercises/2016-2/p21"
   title="2016-2 Probabilidades y Estadística - Pregunta 21"
 />
