--- a/docs/mathematics/probability-and-statistics/exercises/2018-1/p23.mdx
+++ b/docs/mathematics/probability-and-statistics/exercises/2018-1/p23.mdx
@@ -39,7 +39,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/Probabilidades y Estadística/exercises/2018-1/p23"
-  identifier="Probabilidades y Estadística/exercises/2018-1/p23"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/mathematics/probability-and-statistics/exercises/2018-1/p23"
+  identifier="docs/mathematics/probability-and-statistics/exercises/2018-1/p23"
   title="2018-1 Probabilidades y Estadística - Pregunta 23"
 />
