--- a/docs/mathematics/probability-and-statistics/exercises/2018-2/p20.mdx
+++ b/docs/mathematics/probability-and-statistics/exercises/2018-2/p20.mdx
@@ -45,7 +45,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/Probabilidades y Estadística/exercises/2018-2/p20"
-  identifier="Probabilidades y Estadística/exercises/2018-2/p20"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/mathematics/probability-and-statistics/exercises/2018-2/p20"
+  identifier="docs/mathematics/probability-and-statistics/exercises/2018-2/p20"
   title="2018-2 Probabilidades y Estadística - Pregunta 20"
 />
