--- a/docs/mathematics/probability-and-statistics/exercises/2019-1/p06.mdx
+++ b/docs/mathematics/probability-and-statistics/exercises/2019-1/p06.mdx
@@ -36,7 +36,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/Probabilidades y Estadística/exercises/2019-1/p06"
-  identifier="Probabilidades y Estadística/exercises/2019-1/p06"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/mathematics/probability-and-statistics/exercises/2019-1/p06"
+  identifier="docs/mathematics/probability-and-statistics/exercises/2019-1/p06"
   title="2019-1 Probabilidades y Estadística - Pregunta 6"
 />
